<resources>

    <string name="inicioSec">Iniciar Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contra">Contraseña</string>
    <string name="ingresar">Iniciar sesión</string>
    <string name="ingresarEnlinea"> Ingreso Online</string>
    <string name="app_name">Control de Actividades FIA</string>
    <string name="MenuActividad">Menu Actividad</string>
    <string name="MenuDetalleActividad">Menu Detalle Actividad</string>
    <string name="MenuAsistencia">Menu Asistencia</string>
    <string name="MenuCarrera">Menu Carrera</string>
    <string name="MenuCiclo">Menu Ciclo</string>
    <string name="MenuDetalleOferta">Menu Detalle Oferta</string>
    <string name="MenuEquipoDidactico">Menu Equipo Didactico</string>
    <string name="MenuEscuela">Menu Escuela</string>
    <string name="MenudeHorario">Menu de Horario</string>
    <string name="MenuListaHorario">Menu Lista Horario</string>
    <string name="MenuListaEquipo">Menu Lista Equipo</string>
    <string name="MenuLocal">Menu Local</string>
    <string name="MenuMateria">Menu Materia</string>
    <string name="MenumiembroUniversitario">Menu miembro Universitario</string>
    <string name="MenuOfertaAcademica">Menu Oferta Academica</string>
    <!--TODO:MENU PRINCIPAL-->
    <string name="MenuParticular">Menu de Particular</string>
    <string name="MenuMain">Menu Principal</string>
    <string name="TextActividad">Menu Actividad</string>
    <string name="TextCatalogoActividad">Catalogo de Actividades</string>
    <string name="TextParticular">Particular</string>
    <string name="TextMiembroUniversitario">Miembro Universitario</string>
    <string name="TextHorario">Horario</string>
    <string name="textEquipo">Equipo</string>
    <string name="TextCiclo">Ciclo</string>
    <string name="TextLocal">Local</string>
    <!--TODO:MENU CRUD-->
    <string name="Insertar">Insertar</string>
    <string name="editar">Editar</string>
    <string name="consultar">Consultar</string>
    <string name="eliminar">Eliminar</string>
    <!--TODO:LABEL CRUD PARTICULAR-->
    <string name="InsertarParticular">Insertar Particular</string>
    <!--
    <string name="editarParticular">Editar Particular </string>
    <string name="consultarParticular">Consultar Particular</string>
    <string name="eliminarParticular">Eliminar Particular</string>
    -->

    <!-- TODO: Menu Actividad -->
    <string name="TextDetalleActividad">Detalle Actividad</string>
    <string name="TextListaHorario">Lista Horario</string>
    <string name="TextListaEquipoDidactico">Lista Equipo Didactico</string>
    <string name="txtActividad">Actividad</string>
    <string name="txtAsistencia">Asistencia</string>

    <!-- TODO CRUD -->
    <string name="txtCreate">Insertar</string>
    <string name="txtRead">Consultar</string>
    <string name="txtUpdate">Editar</string>
    <string name="txtDelete">Eliminar</string>

    <!-- TODO CRUD Web -->
    <string name="txtCreateWeb">Insertar Online</string>
    <string name="txtReadWeb">Consultar Online</string>
    <string name="txtUpdateWeb">Editar Online</string>
    <string name="txtDeleteWeb">Eliminar Online</string>

    <!-- TODO Gestion Actividad -->
    <string name="GestionActividad">Menu Actividad</string>

    <string name="CatalogoAcademico">Catalogo Academico</string>
    <string name="txtOfertaAcademica">Oferta Academica</string>
    <string name="txtCarrera">Carrera</string>
    <string name="txtEscuela">Escuela</string>
    <string name="txtMateria">Materia</string>
    <string name="txtDetalleOferta">Detalle Oferta</string>

    <!-- TODO Label Crud -->
    <string name="insertar">Insertar </string>
    <string name="cancelar">Cancelar </string>
    <string name="guardar">Guardar </string>
    <string name="eliminarbtn">Eliminar </string>
    <string name="idCarrera">ID CARRERA </string>
    <!-- TODO Label Escuela -->
    <string name="idEscuela">ID ESCUELA </string>
    <string name="nombreEscuela">Nombre Escuela</string>


    <!-- TODO Label Carrera -->
    <string name="nombreCarrera">Nombre Carrera</string>


    <!-- TODO Label Materia -->
    <string name="idAsignatura">ID ASIGNATURA</string>
    <string name="nombreAsignatura">Nombre Asignatura</string>
    <string name="unidadesValorativas">Unidades Valorativas</string>


    <!-- TODO Label EquipoDidactico -->

    <string name="idEquipo">Código del equipo</string>
    <string name="nombreEquipo">Nombre del equipo</string>
    <string name="descripcionEquipo">Descripción del equipo</string>
    <string name="fechaDeCompraEquipo">Fecha de compra del equipo</string>

    <!-- TODO Label DetalleActividad -->
    <string name="codActividad">Código de actividad</string>
    <string name="codGrupo">Grupo</string>
    <string name="codLocal">Local</string>

    <!-- TODO Label ListaEquipoDidactico -->

    <string name="idListaEquipo">Código de la lista de equipo didactico </string>


    <!-- TODO Label DetalleActividad -->
    <string name="idDetalle">Código del detalle de actividad</string>
    <string name="descripcionActividad">Descripción de actividad</string>
    <!-- TODO CRUD Ciclo-->
    <string name="insertarCiclo">Insertar ciclo</string>
    <string name="idCiclo">Id ciclo</string>
    <string name="numeroCiclo">Número ciclo</string>
    <string name="inicioCiclo">Inicio ciclo</string>
    <string name="finCiclo">Fin ciclo</string>
    <string name="anioCiclo">Año</string>
    <string-array name="opcionesNumeroCiclo">
        <item>Seleccione</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="consultarCiclo">Consultar ciclo</string>
    <string name="editarCiclo">Editar ciclo</string>
    <string name="eliminarCiclo">Eliminar ciclo</string>

    <!-- TODO CRUD OfertaAcademica-->
    <string name="insertarOfertaAcademica">Insertar oferta académica</string>
    <string name="idMateriaActiva">Id materia activa</string>
    <string name="nombreMateriaActiva">Nombre materia activa</string>
    <string name="consultarOfertaAcademica">Consultar oferta académica</string>
    <string name="editarOfertaAcademica">Editar oferta académica</string>
    <string name="eliminarOfertaAcademica">Eliminar oferta académica</string>
    <!-- TODO CRUD DetalleOferta-->
    <string name="insertarDetalleOferta">Insertar detalle oferta</string>
    <string name="idGrupoDetalleOferta">Id grupo</string>
    <string name="numeroGrupo">Número grupo</string>
    <string name="tipoGrupo">Tipo grupo</string>
    <string-array name="opcionesTipoGrupo">
        <item>Seleccione</item>
        <item>Teorico</item>
        <item>Discusion</item>
        <item>Laboratorio</item>
        <item>Examen parcial</item>
        <item>Examen laboratorio</item>
        <item>Ponencia</item>
    </string-array>
    <string name="tamanoGrupo">Cupo de grupo</string>
    <string name="consultarDetalleOferta">Consultar detalle oferta</string>
    <string name="editarDetalleOferta">Editar detalle oferta</string>
    <string name="eliminarDetalleOferta">Eliminar detalle oferta</string>

    <!--TODO ACTIVIDAD -->
    <string name="insertarActividad">Insertar actividad</string>
    <string name="idActividad">Id actividad</string>
    <string name="idMiembroUniversitario">Id miembro universitario</string>
    <string name="nombreActividad">Nombre actividad</string>
    <string name="fechaReserva">FECHA DE RESERVA</string>
    <string name="fechaDesde">FECHA DESDE</string>
    <string name="fechaHasta">FECHA HASTA</string>
    <string name="dia">DIA</string>
    <string name="mes">MES</string>
    <string name="anio">AÑO</string>
    <string name="aprobado">Aprobado</string>
    <string name="eliminarActividad">Eliminar actividad</string>
    <string name="consultarActividad">Consultar actividad</string>
    <string name="editarActividad">Editar actividad</string>

    <string name="eliminarActividadO">Eliminar actividad online</string>
    <string name="consultarActividadO">Consultar actividad online</string>
    <string name="editarActividadO">Editar actividad online</string>
    <string name="insertarActividadO">Insertar actividad online</string>

    <string name="eliminarMiembroO">Eliminar miembro online</string>
    <string name="consultarMiembroO">Consultar miembro online</string>
    <string name="editarMiembroO">Editar miembro online</string>
    <string name="insertarMiembroO">Insertar miembro online</string>
    <string name="consultarMiembro">Consultar miembro</string>
    <string name="eliminarMiembro">Eliminar miembro</string>
    <string name="editarMiembro">Editar miembro</string>
    <string name="insertarMiembro">Insertar miembro</string>
    <string name="idUsuario">Id usuario</string>
    <string name="nombreMiembro">Nombre miembro</string>
    <string name="tipoMiembro">Tipo miembro</string>

    <!-- Asistencia -->
    <string name="consultarAsistencia">Consultar asistencia</string>
    <string name="eliminarAsistenciaO">Eliminar asistencia online</string>
    <string name="consultarAsistenciaO">Consultar asistencia online</string>
    <string name="editarAsistenciaO">Editar asistencia online</string>
    <string name="insertarAsistenciaO">Insertar asistencia online</string>
    <string name="eliminarAsistencia">Eliminar asistencia</string>
    <string name="editarAsistencia">Editar asistencia</string>
    <string name="insertarAsistencia">Insertar asistencia</string>
    <string name="calificacion">Calificacion</string>
    <string name="idAsistencia">Id asistencia</string>

    <!-- Particular -->
    <string name="consultarParticular">Consultar particular</string>
    <string name="eliminarParticular">Eliminar particular</string>
    <string name="editarParticular">Editar particular</string>
    <string name="insertarParticular">Insertar particular</string>
    <string name="consultarParticularO">Consultar particular Online</string>
    <string name="eliminarParticularO">Eliminar particular Online</string>
    <string name="editarParticularO">Editar particular Online</string>
    <string name="insertarParticularO">Insertar particular Online</string>
    <string name="idParticular">Id particular</string>
    <string name="nombreParticular">Nombre particular</string>
    <string name="apellidoParticular">Apellido particular</string>
</resources>