<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertarDetalleActividad">
    <TextView
        android:id="@+id/textView10"
        android:layout_width="152dp"
        android:layout_height="37dp"
        android:gravity="center"
        android:text="@string/insertar"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/descripcionActividadInsertar"
        android:layout_width="322dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:hint="@string/descripcionActividad"
        android:inputType="textCapCharacters"
        android:textAllCaps="true"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDetalleInsertar" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/idDetalleInsertar"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="84dp"
        android:hint="@string/idDetalle"
        android:inputType="textCapCharacters"
        android:textAllCaps="true"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/idActividadInsertar"
        android:layout_width="324dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:hint="@string/codActividad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcionActividadInsertar" />

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/GrupoInsertar"
        android:layout_width="321dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:hint="@string/codGrupo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idActividadInsertar" />

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/idLocalInsertar"
        android:layout_width="322dp"
        android:layout_height="65dp"
        android:hint="@string/codLocal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GrupoInsertar"
        app:layout_constraintVertical_bias="0.107" />

    <Button
        android:id="@+id/botonguardarDetalleActividad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/BotonGuardarr"
        android:onClick="insertarDetalleActividad"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/botoncancelarDetalleActividad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/BotonCancelar"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/botonguardarDetalleActividad"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="CancelarInsertarDetalleActividad"/>


</androidx.constraintlayout.widget.ConstraintLayout>