<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertarListaEquipo">


    <TextView
        android:id="@+id/textView10"
        android:layout_width="152dp"
        android:layout_height="37dp"
        android:gravity="center"
        android:text="@string/Insertar"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/idListaEquipoInsertar"
        android:layout_width="295dp"
        android:layout_height="54dp"
        android:hint="@string/idListaEquipo"
        android:inputType="textCapCharacters"
        android:textAllCaps="true"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/idDetalleInsertar"
        android:layout_width="286dp"
        android:layout_height="54dp"
        android:layout_marginTop="64dp"
        android:hint="@string/idDetalle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idListaEquipoInsertar" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/idEquipoInsertar"
        android:layout_width="283dp"
        android:layout_height="65dp"
        android:layout_marginTop="36dp"
        android:hint="@string/idEquipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDetalleInsertar" />

    <Button
        android:id="@+id/botonGuardarListaEquipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/BotonGuardarr"
        android:onClick="insertarListaEquipo"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonCancelarListaEquipoDidactico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/BotonCancelar"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>