<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertarEquipoDidactico">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="152dp"
        android:layout_height="37dp"
        android:gravity="center"
        android:text="@string/insertar"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/idEquipo"
        android:textAllCaps="true"
        android:layout_width="360dp"
        android:layout_height="52dp"
        android:hint="@string/idEquipo"
        android:inputType="textCapCharacters"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nombreEquipo"
        android:layout_width="360dp"
        android:layout_height="52dp"
        android:hint="@string/nombreEquipo"
        android:inputType="textCapCharacters"
        android:textAllCaps="true"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/descripcionEquipo"
        android:layout_width="360dp"
        android:layout_height="52dp"
        android:hint="@string/descripcionEquipo"
        android:inputType="textCapCharacters"
        android:textAllCaps="true"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />

    <Button
        android:id="@+id/botonguardarEquipoDidactico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="144dp"
        android:backgroundTint="@color/BotonGuardarr"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/botoncancelarEquipoDidactico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:backgroundTint="@color/BotonCancelar"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/botonguardarEquipoDidactico"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>