<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertarEquipoDidacticoExterno">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="152dp"
        android:layout_height="37dp"
        android:gravity="center"
        android:text="@string/insertar"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/idEquipoInsertar"
        android:layout_width="323dp"
        android:layout_height="57dp"
        android:hint="@string/idEquipo"
        android:inputType="textCapCharacters"
        android:textAllCaps="true"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nombreEquipoInsertar"
        android:layout_width="323dp"
        android:layout_height="55dp"
        android:hint="@string/nombreEquipo"
        android:inputType="textCapCharacters"
        android:textAllCaps="true"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEquipoInsertar"
        app:layout_constraintVertical_bias="0.135" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/descripcionEquipoInsertar"
        android:layout_width="322dp"
        android:layout_height="104dp"
        android:hint="@string/descripcionEquipo"
        android:inputType="textCapCharacters"
        android:textAllCaps="true"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toTopOf="@+id/botoncancelarEquipoDidactico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreEquipoInsertar"
        app:layout_constraintVertical_bias="0.361" />

    <Button
        android:id="@+id/botonguardarEquipoDidactico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/BotonGuardarr"
        android:onClick="insertarEquipoExterno"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/botoncancelarEquipoDidactico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/BotonCancelar"
        android:text="@string/cancelar"
        android:onClick="CancelarInsertarEquipo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/botonguardarEquipoDidactico"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>