<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultarCiclo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp"></Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consultarCiclo"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp"></Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/txtIdCiclo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/idCiclo"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtIdCicloConsultar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="text"
                android:textAlignment="center" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp"></Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/consultar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consultar"
                android:onClick="consultarCiclo"/>
        </LinearLayout>


        <Space
            android:layout_width="0dp"
            android:layout_height="20dp"></Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:weightSum="5">

            <TextView
                android:id="@+id/txtNumeroCicloConsultar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/numeroCiclo"
                android:textSize="20sp" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp"></Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:weightSum="5">

            <TextView
                android:id="@+id/txtInicioCicloConsultar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/inicioCiclo"
                android:textSize="20sp" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp"></Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:weightSum="5">

            <TextView
                android:id="@+id/txtFinCicloConsultar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/finCiclo"
                android:textSize="20sp" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp"></Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:weightSum="5">

            <TextView
                android:id="@+id/txtAnioCicloConsultar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/anioCiclo"
                android:textSize="20sp" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp"></Space>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>